--- a/BlazorEcommerce/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -27,7 +27,7 @@
             Id = 1,
             Title = "Star Wars",
             Description = "Star Wars, conocida también en español como La guerra de las galaxias,7​8​9​ es una franquicia y universo compartido de fantasía compuesta primordialmente de una serie de películas concebidas por el cineasta estadounidense George Lucas en la década de 1970, y producidas y distribuidas inicialmente por 20th Century Fox y posteriormente por The Walt Disney Company a partir de 2012. Su trama describe las vivencias de un grupo de personajes que habitan en una galaxia ficticia e interactúan con elementos como «la Fuerza», un campo de energía metafísico y omnipresente10​ que posee un «lado luminoso» impulsado por la sabiduría, la nobleza y la justicia y utilizado por los Jedi, y un «lado oscuro» usado por los Sith y provocado por la ira, el miedo, el odio y la desesperación.",
-            ImageUrl = "https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Star_wars2.svg/1200px-Star_wars2.svg.png",
+            ImageUrl = "https://es.web.img2.acsta.net/r_1280_720/pictures/bzp/01/25802.jpg",
             Price = 9.99
         },
         new Product()
