Seed Data, Get Data from database

--- a/BlazorEcommerce/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -26,7 +26,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var result = await Http.GetFromJsonAsync<List<Product>>("api/product");
-        if (result is not null) Products = result;
+        var result = await Http.GetFromJsonAsync<ServiceResponse<List<Product>>>("api/product");
+        if (result is not null && result.Data is not null) Products = result.Data;
     }
 }
