--- a/BlazorEcommerce/BlazorEcommerce/Client/Pages/ProductDetails.razor
+++ b/BlazorEcommerce/BlazorEcommerce/Client/Pages/ProductDetails.razor
@@ -3,7 +3,7 @@
 
 @if(product == null)
 {
-    <span>Loading Products...</span>
+    <span>@message</span>
 }   
 else
 {   
@@ -21,13 +21,22 @@ else
 
 @code {
     private Product? product;
+    private string message = string.Empty;
 
     [Parameter]
     public int Id { get; set; }
 
     protected override async Task OnParametersSetAsync()
     {
-        product = ProductService.Products.Find(p => p.Id == Id);
-
+        message = "Loading Product...";
+        var result = await service.GetProduct(Id);
+        if (!result.Success)
+        {
+            message = result.Message;
+        }
+        else
+        {
+            product = result.Data;
+        }
     }
 }
