--- a/BlazorEcommerce/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -1,13 +1,13 @@
 ﻿@inject IProductService service
 
-@if (ProductService.Products == null || ProductService.Products.Count == 0)
+@if (Products == null || Products.Count == 0)
 {
-    <span>Loading Products...</span>
+    <span>@message</span>
 }
 else
 {
     <ul class="list-unstyled">
-            @foreach (var product in ProductService.Products)
+            @foreach (var product in Products)
         {
             <li class="media my-3">
                 <div class="media-img-wrapper mr-2">
@@ -29,8 +29,20 @@ else
     </ul>
 }
 @code {
+    private List<Product> Products;
+    private string message = string.Empty;
+
     protected override async Task OnInitializedAsync()
     {
-        await service.GetProducts();
+        var result = await service.GetProducts();
+        message = "Loading Product...";
+        if (!result.Success)
+        {
+            message = result.Message;
+        }
+        else
+        {
+            Products = result.Data;
+        }
     }
 }
